fix: improve loading anim without layout shift in table

--- a/src/components/Loading/index.module.css
+++ b/src/components/Loading/index.module.css
@@ -48,30 +48,32 @@
 }
 /* conditional */
 .container {
-  position: relative;
-  min-height: 200px;
+    position: relative;
+    min-height: 200px;
 }
 
 .loaderWrapper {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out;
-  pointer-events: none;
-  z-index: 3;
+    position: absolute !important;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    pointer-events: none;
+    z-index: 3;
 }
-
+.trWrapper {
+    border: transparent !important;
+}
 .loaderWrapper.visible {
-  opacity: 1;
+    opacity: 1;
 }
 
 .content {
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
 }
 
 .content.visible {
-  opacity: 1;
+    opacity: 1;
 }
